Revert "[TSK-53] 챌린지 생성에서 종속적인 연산 처리 및 기존 답변 확인 추가"